--- a/src/app/embla.css
+++ b/src/app/embla.css
@@ -20,7 +20,7 @@
   padding-left: 1rem;
 }
 .embla__slide__img {
-  border-radius: 1.8rem;
+  border-radius: 12px;
   display: block;
   height: 19rem;
   width: 100%;
@@ -51,22 +51,21 @@
   border: 0;
   padding: 0;
   margin: 0;
-  box-shadow: inset 0 0 0 0.2rem rgb(25, 25, 25);
-  width: 2.5rem;
-  height: 2.5rem;
+  width: 2rem;
+  height: 2rem;
   z-index: 1;
   border-radius: 50%;
-  color: rgb(222, 222, 222);
+  color: #ec7a56;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 .embla__button:disabled {
-  color: rgb(101, 101, 101);
+  color: #4b3129;
 }
 .embla__button__svg {
-  width: 35%;
-  height: 35%;
+  width: 40%;
+  height: 40%;
 }
 .embla__dots {
   display: flex;
@@ -87,24 +86,24 @@
   border: 0;
   padding: 0;
   margin: 0;
-  width: 2.6rem;
-  height: 2.6rem;
+  width: 1rem;
+  height: 1rem;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 50%;
 }
 .embla__dot:after {
-  box-shadow: inset 0 0 0 0.2rem rgb(25, 25, 25);
-  width: 1rem;
-  height: 1rem;
+  box-shadow: inset 0 0 0 0.1rem #4b3129;
+  width: 0.5rem;
+  height: 0.5rem;
   border-radius: 50%;
   display: flex;
   align-items: center;
   content: "";
 }
 .embla__dot--selected:after {
-  box-shadow: inset 0 0 0 0.2rem rgb(222, 222, 222);
+  box-shadow: inset 0 0 0 0.1rem #ec7a56;
 }
 .embla__lazy-load {
   position: relative;
@@ -150,7 +149,5 @@
 
 .embla__text {
   font-size: 12px;
-  padding-left: 1rem;
-  padding-right: 1rem;
   font-style: italic;
 }
