--- a/src/app/embla.css
+++ b/src/app/embla.css
@@ -23,7 +23,7 @@
   border-radius: 12px;
   display: block;
   max-width: 100%;
-  max-height: 100%;
+  max-height: 400px;
   object-fit: fill;
 }
 .embla__controls {
