--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -103,3 +103,30 @@ body::-webkit-scrollbar-thumb {
   background-color: #ec7a56;
   border-radius: 4px;
 }
+
+.curve {
+  svg {
+    width: 100vw;
+    height: calc(100vh + 600px);
+    top: -300px;
+    left: 0;
+    position: fixed;
+    pointer-events: none;
+  }
+}
+
+.inner {
+  background-color: black;
+  .page {
+    background-color: white;
+  }
+  .slide {
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    background-color: white;
+    z-index: 1;
+  }
+}
